2004-10-12  Martin Baulig  <martin@ximian.com>

	* expression.cs (MemberAccess.DoResolve): If we're a SimpleName
	and have type arguments, create and resolve a ConstructedType.

2004-10-12  Martin Baulig  <martin@ximian.com>

	* generic.cs (Constraints.CheckInterfaceMethod): Do a more relaxed
	checking for type parameter constraints.

2004-10-12  Martin Baulig  <martin@ximian.com>

	* decl.cs (MemberCache.FindMemberToOverride): Use
	TypeManager.IsEqual() to compare the parameters and Type.Equals()
	to compare the invocationType.

	* typemanager.cs (TypeManager.IsEqual): Added support for arrays.
	When comparing two type parameters, only do the signature-only
	comparision for method type parameters.

2004-10-11  Martin Baulig  <martin@ximian.com>

	* report.cs: Don't make --fatal abort on warnings, we have
	-warnaserror for that.

2004-10-11  Martin Baulig  <martin@ximian.com>

	* typemanager.cs
	(TypeManager.IsEqualGenericType): Removed, use IsEqual() instead.
	(TypeManager.IsEqual): Call ourself recursively instead of using
	Type.IsEqual().	

2004-10-11  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.DefineType): Only call TypeParameter.Define()
	on our own type parameters, not on the ones we inherit from a containing
	class.

	* expression.cs (Invocation.InferType): Use `==', not `Equals()' for
	the comparision.

	* generic.cs (TypeParameter.Define): We may only be called once.

	* pending.cs (Pending.InterfaceMethod): Call TypeManager.Real_IsEqual()
	instead of TypeManager.IsEqual().

2004-09-28  Martin Baulig  <martin@ximian.com>

	* generic.cs
	(GenericConstraints.EffectiveBaseClass): New public property.
	(TypeParameter.GenericConstraints): New public property.
	(ConstructedType.CheckConstraints): Improved.

	* convert.cs (Convert.TypeParam_EffectiveBaseType): New private method.
	(Convert.TypeParameterConversion): New private method; use this in
	ImplicitReferenceConversion() and ImplicitReferenceConversionExists()